[package]
name = "stegrust"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
clap = "4.6.1"
env_logger = "0.11.10"
keyring = "4.0.1"
log = "0.4.32"
nix = "0.31.3"
rand = "0.10.1"
serde = "1.0.228"
serde_json = "1.0.150"
sqlite = "0.37.0"
walkdir = "2.5.0"
zeroize = "1.8.2"
