[package]
name = "stegrust"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.102"
argon2 = "0.5.3"
clap = { version = "4.6.1", features = ["derive"]}
dotenv = "0.15.0"
env_logger = "0.11.10"
getrandom = "0.4.2"
hex = "0.4.3"
keyring = "3.6.3"
log = "0.4.32"
nix = "0.31.3"
rand =  { version = "0.10.1", features = [ "std" ]}
rpassword = "7.5.4"
rusqlite = { version = "0.40.1", features = ["bundled-sqlcipher"] }
rusqlite_migration = "2.6.0"
serde = "1.0.228"
serde_json = "1.0.150"
walkdir = "2.5.0"
zeroize = "1.8.2"
